welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:2: error: missing arguments for method minValue in class noTriples;
follow this method with `_' if you want to treat it as a partially applied function
	for(k<-minValue to maxValue){
               ^